fix bug causing scrollbars in inline content in some cases

--- a/fancybox/fancybox.dev.css
+++ b/fancybox/fancybox.dev.css
@@ -83,6 +83,10 @@
 	border: 0px solid #fff;
 }
 
+#fancybox-content > div {
+	overflow: hidden !important;
+}
+
 #fancybox-hide-sel-frame {
 	position: absolute;
 	top: 0;
